outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval8977384056577075335_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine distance, regret, and a dynamic exploration bonus, where the exploration bonus is scaled by the remaining nodes and a novel "node centrality" metric (average distance to other nodes) to prioritize well-connected nodes early in the search, while the regret component gains more influence as the search progresses, with a memory penalty that dynamically adjusts based on the ratio of visited to unvisited nodes.}
                                                                                                                                                                                                                                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine distance, regret, and a dynamic exploration bonus, where the exploration bonus is scaled by the remaining nodes and a novel "node centrality" metric (average distance to other nodes) to prioritize well-connected nodes early in the search, while the regret component gains more influence as the search progresses, with a memory penalty that dynamically adjusts based on the ratio of visited to unvisited nodes.}
                                                                                                                                                                                                                                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'
